backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      labels:
        app: backend
    spec:
      containers:
      - name: backend-con
        image: url-shortener-backend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-srv
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 7000
    targetPort: 7000
