frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-frontend-dep
  labels:
    app: url-frontend
    project: url-shortener
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: url-frontend
  template:
    metadata:
      name: url-frontend-pod
      labels:
        app: url-frontend
        project: url-shortener
    spec:
      containers:
      - name: url-frontend-con
        image: url-shortener-frontend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: url-frontend-srv
  labels:
    project: url-shortener
spec:
  selector:
    app: url-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
