mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-mongodb-dep
  labels:
    app: url-mongodb
    project: url-shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-mongodb
  template:
    metadata:
      name: url-mongodb-pod
      labels:
        app: url-mongodb
        project: url-shortener
    spec:
      containers:
      - name: url-mongodb-con
        image: mongo:6.0
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: url-mongodb-srv
  labels:
    project: url-shortener
spec:
  selector:
    app: url-mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
